# gogit

./: README.md  README.rst  pyproject.toml
gogit/: main.py
gopher_git/: gopher_git.py  main.py
tests/: test_gogit.py  test_gopher_git.py
