[tool.poetry]
name = 'gopher_git'
version = '0.1.0'
description = 'Tool that shows current git project information given a parent directory containing one or multiple git project directories.'
authors = ['roboto84 <7658704+roboto84@users.noreply.github.com>']

[tool.poetry.dependencies]
python = '^3.9'
python-dotenv = '^0.15.0'
termcolor= '^1.1.0'

[tool.poetry.dev-dependencies]
pytest = '^5.2'

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry.scripts]
gogit = "gopher_git.gopher_git:run_main"